k8s/platform/networking/ingress/staging/argocd.ingress.staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  ingressClassName: nginx-argo
  tls:
    - hosts:
        - argocd.staging.eliasdebock.com
      secretName: argocd-staging-tls
  rules:
    - host: argocd.staging.eliasdebock.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
